--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ div.questions{
   padding: 0 20px 0 20px;
 }
 
+div.questions h4{
+    font-size: 30px;
+    margin-bottom: 10px;
+}
 footer{
   border-top: 1px solid #ccc;
   margin-top: 80px;
