automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ div.questions p{
 
 div.questions a.btn{
   color: #FFF;
-  background-color: #007bff;
+  border-color: #007bff;
   border-radius: 5px;
 }
 
