automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ div.questions a.btn{
   border-color: #007bff;
   background-color: #007bff;
   border-radius: 5px;
+  text-decoration: none;
 }
 
 footer{
