automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ div.questions a.btn{
   background-color: #007bff;
   border-radius: 5px;
   text-decoration: none;
+  padding: 18px;
 }
 
 footer{
