--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ div.questions a.btn{
   font-size: 20px;
 }
 
-div.questions a.btm:hover{
+div.questions a.btn:hover{
   text-decoration: underline;
 }
 
