automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a:hover{
 }
 
 h3 a#iced{
-  padding: 30px;
+  padding-top: 30px;
   font-size: 20px;
   text-decoration: none;
   color: grey;
