--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a:hover{
 }
 
 h3 a#iced{
-  padding-top: 70px;
+  display: inline;
   font-size: 30px;
   text-decoration: none;
   color: grey;
