--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a:hover{
 }
 
 h3 a#iced{
-  margin-top: 30px;
+  padding-top: 30px;
   display: inline;
   font-size: 30px;
   text-decoration: none;
